2005-09-12 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add a library version API, task #4597: add <avr/version.h>
	* configure.ac: Add all the hooks to assemble the library
	version number from its pieces, and substitute the result
	wherever it's needed.
	* include/avr/version.h.in: New file.
	* include/avr/Makefile.am: add version.h.in and the logic
	to create version.h out of it.
	* include/avr/io.h: include <avr/version.h> for backwards-
	compatible tests.

2005-09-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/sleep.h: Fix sleep mode definitions for the AT94K
	devices.  [Fixes bug #12735: No support for AT94K devices in
	sleep.h]

2005-09-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: Escape # to fix doxygen warning.
	* include/avr/delay.h: (Ditto.)
	* include/avr/sfr_defs.h: (Ditto.)

2005-09-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[bug #14266: use __extension__ in avr-libc header files]
	* include/avr/boot.h: Use __extension__ for brace groups that
	return an expression value.
	* include/avr/parity.h: (Ditto.)
	* include/avr/pgmspace.h: (Ditto.) Document exported types and
	defines.

2005-09-07 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/eeprom.h (eeprom_is_ready): Add new version for AT86RF401
	[Fixed bug #14378]

2005-09-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/inttypes.h: fix a doxygen markup comment.

2005-09-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/sleep.h: sleep type 2 has a few extensions
	(tiny2313, tiny13, tiny26), fix these; make the doxygen docs work
	again [bug #12496: about set_sleep_mode() and
	tiny26/tiny2313]

2005-09-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Make "make distcheck" finally work again:

	* Makefile.am: set DISTCHECK_CONFIGURE_FLAGS.
	* configure.ac (AM_INIT_AUTOMAKE): move from gzip to bzip2 distfile.
	* scripts/Makefile.am: add avr-man.in to EXTRA_DIST, fix location
	of stamp-h1 dependecny.

2005-09-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
